finished the api for adding triggers
