# src/app/swagger/swagger.spec.json
@@ -127,9 +127,113 @@
     "/chain-event/base-listeners/trigger-with-actions": {
       "post": {
         "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Add a new trigger with actions",
+            "schema": {
+              "$ref": "#/definitions/EventFetchRequest"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    }
+  },
+  "definitions": {
+    "Condition": {
+      "type": "object",
+      "properties": {
+        "operator": {
+          "type": "string",
+          "example": "eq"
+        },
+        "value": {
+          "type": "string",
+          "example": "\"UP\""
+        },
+        "field": {
+          "type": "string",
+          "example": "$.\"direction\""
+        }
+      }
+    },
+    "Destination": {
+      "type": "object",
+      "properties": {
+        "destinationType": {
+          "type": "string",
+          "example": "telegram"
+        },
+        "destinationConfig": {
+          "type": "string",
+          "example": "{\"template\":\"ETH Price:\",\"telegramChatId\":\"6200972469\",\"telegramUserId\":\"LakshyaSky\"}"
+        }
+      }
+    },
+    "Action": {
+      "type": "object",
+      "properties": {
+        "userId": {
+          "type": "string",
+          "example": "test_user"
+        },
+        "name": {
+          "type": "string",
+          "example": "test_action"
+        },
+        "chainId": {
+          "type": "number",
+          "example": 2
+        },
+        "conditions": {
+          "type": "array",
+          "example": [
+            "Condition"
+          ],
+          "items": {
+            "type": "string"
+          }
+        },
+        "destinations": {
+          "type": "array",
+          "example": [
+            "Destination"
+          ],
+          "items": {
+            "type": "string"
+          }
+        }
+      }
+    },
+    "EventFetchRequest": {
+      "type": "object",
+      "properties": {
+        "eventFetchRequestId": {
+          "type": "number",
+          "example": 1
+        },
+        "functionName": {
+          "type": "string",
+          "example": "SPOT_PRICE_MATCH {% now 'unix', '' %}"
+        },
+        "functionArgs": {},
+        "addedBy": {
+          "type": "string",
+          "example": "test_user"
+        },
+        "actions": {
+          "type": "array",
+          "example": [
+            "Action"
+          ],
+          "items": {
+            "type": "string"
           }
         }
       }
